Add .ipynb_checkpoints/ to .gitignore to exclude Jupyter auto saves

--- a/usa_regulation_data_analysis.ipynb
+++ b/usa_regulation_data_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "b62c6c9c-565f-4260-a397-cf1b996ae9d6",
    "metadata": {},
    "source": [
-    "### 🐶 Load & Inspect Agency Mapping for D.O.G.E. (from eCFR API - as of 2024)\n",
+    "### 🐶 Load & Inspect Agency Mapping for D.O.G.E.\n",
     "\n",
     "> The agency-to-regulation mapping is retrieved from the [`agencies.json`](https://www.ecfr.gov/developers/documentation/api/v1) endpoint of the Electronic Code of Federal Regulations (eCFR).  \n",
     "> While no explicit timestamp is provided in the API response, the data structure appears to reflect 2024 mappings, according to [DOGE's regulations sources](https://doge.gov/regulations).  \n",
@@ -54,6 +54,7 @@
     "import requests\n",
     "import json\n",
     "\n",
+    "# API endpoint for agency metadata  \n",
     "url = \"https://www.ecfr.gov/api/admin/v1/agencies.json\"\n",
     "response = requests.get(url)   # HTTP 200 = success; 404 = invalid input\n",
     "#print(response)\n",
