Inspect API output using linux curl and grep command

--- a/usa_regulation_data_analysis.ipynb
+++ b/usa_regulation_data_analysis.ipynb
@@ -7,9 +7,28 @@
    "source": [
     "### 🐶 Load & Inspect Agency Mapping for D.O.G.E.\n",
     "\n",
-    "> The agency-to-regulation mapping is retrieved from the [`agencies.json`](https://www.ecfr.gov/developers/documentation/api/v1) endpoint of the Electronic Code of Federal Regulations (eCFR).  \n",
-    "> While no explicit timestamp is provided in the API response, the data structure appears to reflect 2024 mappings, according to [DOGE's regulations sources](https://doge.gov/regulations).  \n",
+    "> The agency-to-regulation mapping is retrieved from the [agencies.json](https://www.ecfr.gov/developers/documentation/api/v1) endpoint of the Electronic Code of Federal Regulations (eCFR).\n",
+    "\n",
+    "> While no explicit timestamp is provided in the API response, the data structure appears to reflect 2024 mappings, according to [DOGE's regulations sources](https://doge.gov/regulations).\n",
+    "\n",
     "> This mapping includes all top-level agencies (sorted by name), along with their respective child agencies, and serves as the foundation for linking CFR titles, chapters, and parts to their governing authorities.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7e60602-f4f2-42b7-9f9a-d8051b025fbf",
+   "metadata": {},
+   "source": [
+    "### 🔎 Inspect API Output via CLI (Optional)\n",
+    "\n",
+    "> For a quick command-line inspection of the eCFR `agencies.json` response:  \n",
+    "\n",
+    "> ```bash\n",
+    "> curl -X GET \"https://www.ecfr.gov/api/admin/v1/agencies.json\" -H \"accept: application/json\" | jq .\n",
+    "> ```  \n",
+    "\n",
+    "> This fetches the agency mapping JSON directly and pretty-prints it using `jq`.  \n",
+    "> Grep for keywords, detect patterns, or understand the structure before processing it in Python.\n"
    ]
   },
   {
@@ -62,6 +81,45 @@
     "# Pretty print the JSON\n",
     "print(json.dumps(data, indent=2))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1e49073-a92f-4743-a859-c6afe4c8e7e6",
+   "metadata": {},
+   "source": [
+    "Next Steps:\n",
+    "\n",
+    "- Data pipeline\n",
+    "- Ingest Data and Flatten data structure (group the children references into the parent references)\n",
+    "- Load into data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3e77a320-8897-41ec-9a7a-ec1190b23808",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ce91b28-72ff-4002-9746-c675f39de717",
+   "metadata": {},
+   "source": [
+    "Next Step:\n",
+    "- Download the data from [here](https://www.govinfo.gov/bulkdata/CFR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53b9ab5f-1ee4-4e74-ad6a-ac35a42b75e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
