Save date-stamped copy of agencies json to archive directory

--- a/notebooks/01_agency_mapping_and_flatening.ipynb
+++ b/notebooks/01_agency_mapping_and_flatening.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "a8633fc4-2231-4ab6-a829-cf9b3db6489f",
    "metadata": {},
    "outputs": [
@@ -103,37 +103,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "  \"agencies\": [\n",
-      "    {\n",
-      "      \"name\": \"Administrative Conference of the United States\",\n",
-      "      \"short_name\": \"ACUS\",\n",
-      "      \"display_name\": \"Administrative Conference of the United States\",\n",
-      "      \"sortable_name\": \"Administrative Conference of the United States\",\n",
-      "      \"slug\": \"administrative-conference-of-the-united-states\",\n",
-      "      \"children\": [],\n",
-      "      \"cfr_references\": [\n",
-      "        {\n",
-      "          \"title\": 1,\n",
-      "          \"chapter\": \"III\"\n",
-      "        }\n",
-      "      ]\n",
-      "    },\n",
-      "    {\n",
-      "      \"name\": \"Advisory Council on Historic Preservation\",\n",
-      "      \"short_name\": \"ACHP\",\n",
-      "      \"display_name\": \"Advisory Council on Historic Preservation\",\n",
-      "\n",
-      "\n",
-      "... [truncated for Git preview] ...\n",
-      "\n",
-      "\n"
+      "Saved snapshot to {filename}\n"
      ]
     }
    ],
    "source": [
+    "from datetime import datetime\n",
     "import requests\n",
     "import json\n",
+    "import os\n",
     "\n",
     "# API endpoint for agency metadata  \n",
     "url = \"https://www.ecfr.gov/api/admin/v1/agencies.json\"\n",
@@ -141,7 +119,22 @@
     "#print(response)\n",
     "data = response.json()\n",
     "# Pretty print the JSON\n",
-    "#print(json.dumps(data, indent=2))\n"
+    "#print(json.dumps(data, indent=2))\n",
+    "\n",
+    "# Format today's date\n",
+    "today_str = datetime.today().strftime(\"%Y-%m-%d\")\n",
+    "\n",
+    "# Define archive directory and ensure it exists\n",
+    "archive_dir = \"../archive\"\n",
+    "os.makedirs(archive_dir, exist_ok=True)\n",
+    "\n",
+    "# Define full path with date-stamped filename\n",
+    "filename = os.path.join(archive_dir, f\"agencies_snapshot_{today_str}.json\")\n",
+    "\n",
+    "# Save to file\n",
+    "with open(filename, \"w\") as f:\n",
+    "    json.dump(data, f, indent=2)\n",
+    "print(\"Saved snapshot of agency json to {filename}\")"
    ]
   },
   {
