Flatten nested agency JSON into rows and save to pandas data frame

--- a/notebooks/01_agency_mapping_and_flatening.ipynb
+++ b/notebooks/01_agency_mapping_and_flatening.ipynb
@@ -79,23 +79,22 @@
    "id": "b7e60602-f4f2-42b7-9f9a-d8051b025fbf",
    "metadata": {},
    "source": [
-    "#### API Structure Observations & Analysis\n",
-    "> The root key is `agencies`, a list of agency dictionaries.\n",
+    "#### API Structure Overview\n",
     "\n",
-    "> Each agency contains:\n",
-    "> - Metadata (`name`, `short_name`, `slug`, etc.)\n",
-    "> - A `cfr_references` list — the **critical key** used to extract regulation text based on fields like `title`, `chapter`, `part`, etc.\n",
-    "> - An optional `children` list — each child is structured like the parent but **does not include further children**\n",
-    "> \n",
-    "> Nested hierarchy to process:\n",
-    "> `agencies` → `children` (if any) → `cfr_references`\n",
+    "> The root key is `agencies`, a list of agency dictionaries. Each agency has:\n",
+    "> - Metadata (`name`, `slug`, etc.)  \n",
+    "> - `cfr_references` → used to extract regulation text  \n",
+    "> - Optional `children` → same structure, no nested children\n",
     "\n",
-    "> 🔥🔥 This structure must be unraveled to create a flat, downstream dataset for regulation text retrieval and word count analysis  \n"
+    "> Nested hierarchy to process:  \n",
+    "> `agencies` → `children` (if any) → `cfr_references`  \n",
+    "\n",
+    "> 🔥🔥 Flattening `agencies` + `children` + their `cfr_references` builds the dataset for downstream analysis.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "a8633fc4-2231-4ab6-a829-cf9b3db6489f",
    "metadata": {},
    "outputs": [
@@ -103,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved snapshot to {filename}\n"
+      "Saved snapshot of agency json to ../archive/agencies_snapshot_2025-04-05.json\n"
      ]
     }
    ],
@@ -132,9 +131,9 @@
     "filename = os.path.join(archive_dir, f\"agencies_snapshot_{today_str}.json\")\n",
     "\n",
     "# Save to file\n",
-    "with open(filename, \"w\") as f:\n",
-    "    json.dump(data, f, indent=2)\n",
-    "print(\"Saved snapshot of agency json to {filename}\")"
+    "#with open(filename, \"w\") as f:\n",
+    "#    json.dump(data, f, indent=2)\n",
+    "print(f\"Saved snapshot of agency json to {filename}\")"
    ]
   },
   {
@@ -151,57 +150,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "b5089e24-fa5d-440d-ae3d-27e290ff8f13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Parse a json file, grab specific fields, one field has nested info to extract and group to the parent\n",
-    "\n",
-    "flattened_row = []\n",
-    "#data = response.json()\n",
+    "flattened_rows = []\n",
     "#print(data)\n",
-    "#print(data['agencies'])\n"
+    "#print(data['agencies'])\n",
+    "\n",
+    "for agency in data['agencies']:\n",
+    "    parent_name = agency.get('name') # key:value\n",
+    "    #print(\"parent_name=\", parent_name)\n",
+    "    short_name  = agency.get('short_name')\n",
+    "    slug_name   = agency.get('slug')\n",
+    "    children    = agency.get('children')\n",
+    "\n",
+    "    # Try to get 'cfr_references' and 'children' from the agency dictionary\n",
+    "    # If it's missing or None, assign an empty list to avoid iteration errors\n",
+    "    parent_cfr_refs = agency.get('cfr_references', [])\n",
+    "    children        = agency.get('children', [])\n",
+    "\n",
+    "    # Loop over parent CFR refs, safe to iterate because it's a guaranteed list\n",
+    "    for ref in parent_cfr_refs:\n",
+    "        #print(\"..cfr_references title=\", ref.get('title'), \" chapter=\", ref.get('chapter'))\n",
+    "        flattened_rows.append({\"name\": parent_name, \n",
+    "                              \"short_name\": short_name, \n",
+    "                              \"slug\": slug_name,\n",
+    "                              \"title\": ref.get('title'),\n",
+    "                              \"subtitle\": ref.get('subtitle'),\n",
+    "                              \"chapter\": ref.get('chapter'),\n",
+    "                              \"subchapter\": ref.get('subchapter'),\n",
+    "                              \"part\": ref.get(\"part\")\n",
+    "                             })\n",
+    "\n",
+    "    # Loop over children CFR refs\n",
+    "    for child in children:\n",
+    "        # child_name = child.get('name')\n",
+    "        for ref in child.get('cfr_references', []):\n",
+    "            flattened_rows.append({\"name\": parent_name, \n",
+    "                                  \"short_name\": short_name, \n",
+    "                                  \"slug\": slug_name,\n",
+    "                                  \"title\": ref.get('title'),\n",
+    "                                  \"subtitle\": ref.get('subtitle'),\n",
+    "                                  \"chapter\": ref.get('chapter'),\n",
+    "                                  \"subchapter\": ref.get('subchapter'),\n",
+    "                                  \"part\": ref.get(\"part\")\n",
+    "                                 })\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "3e77a320-8897-41ec-9a7a-ec1190b23808",
+   "execution_count": 44,
+   "id": "070f6fae-3124-4046-8aeb-2d6495fbcbaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved data frame to ../archive/flattened_agencies_list_2025-04-06.csv\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Parse JSON\n",
-    "for agency in data['agencies']:\n",
-    "    #print(agency)\n",
-    "    parent_name       = agency.get('name')\n",
-    "    parent_short_name = agency.get('short_name')\n",
-    "    parent_slug       = agency.get('slug')\n",
+    "agencies_df = pd.DataFrame(flattened_rows)\n",
     "\n",
-    "    # row \n",
-    "    flattened_row.append({'name':parent_name, 'short_name':parent_short_name})\n",
+    "# Preview the result\n",
+    "#agencies_df.head(len(agencies_df))\n",
+    "#print(f\"Total CFR references across all agencies and children: {len(agencies_df)}\")\n",
     "\n",
-    "#for i in range(0, len(flattened_row)):\n",
-    "    #print(flattened_row[i])\n",
+    "# Format today's date\n",
+    "today_str = datetime.today().strftime(\"%Y-%m-%d\")\n",
     "\n",
-    "#df = pd.json_normalize(data)\n",
-    "#df = pd.DataFrame(data)\n",
-    "#df.head(10)\n",
-    "# Save output to CSV\n",
+    "# Define archive directory and ensure it exists\n",
+    "archive_dir = \"../archive\"\n",
+    "os.makedirs(archive_dir, exist_ok=True)\n",
     "\n",
-    "#extract short_name, display_name, slug, children, cfr_references, title, subtitle, chapter, subchapter, part, etc.\n"
+    "# Define full path with date-stamped filename\n",
+    "filename = os.path.join(archive_dir, f\"flattened_agencies_list_{today_str}.csv\")\n",
+    "\n",
+    "# Save data frame to a csv file\n",
+    "agencies_df.to_csv(filename, index=False)\n",
+    "print(f\"Saved data frame to {filename}\")\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1ce91b28-72ff-4002-9746-c675f39de717",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bed110ff-a403-4be2-a831-e5309c10c02a",
    "metadata": {},
-   "source": [
-    "Next Step:\n",
-    "- Download the data from [here](https://www.govinfo.gov/bulkdata/CFR)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
