Update notebook to import helpers/ Poetry package

--- a/notebooks/01_agency_mapping_and_flattening.ipynb
+++ b/notebooks/01_agency_mapping_and_flattening.ipynb
@@ -94,35 +94,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "48fefd04-af86-463c-9735-5591043c7f67",
+   "execution_count": 1,
+   "id": "da3c913c-b98a-49dd-b2bc-f314b2d4b19f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2025-05-01\n",
       "~/repo/doge-data-challenge/archive\n",
-      "~/repo/doge-data-challenge/data\n",
-      "~/repo/doge-data-challenge/data/regulations_xml/2025-04-17\n"
+      "~/repo/doge-data-challenge/data/regulations_xml/2025-04-17\n",
+      "2025-04-17\n",
+      "~/repo/doge_data_challenge\n",
+      "~/repo\n",
+      "~/anaconda3/lib/python310.zip\n",
+      "~/anaconda3/lib/python3.10\n",
+      "~/anaconda3/lib/python3.10/lib-dynload\n",
+      "\n",
+      "~/Library/Caches/pypoetry/virtualenvs/doge-data-challenge-t_Z9FBnC-py3.10/lib/python3.10/site-packages\n",
+      "~/repo/doge-data-challenge\n"
      ]
     }
    ],
    "source": [
-    "from helpers.env_paths import load_paths\n",
-    "from helpers.print_helpers import shorten_path\n",
+    "import sys\n",
+    "from datetime import datetime\n",
+    "from doge_data_challenge.helpers import init_notebook\n",
     "\n",
-    "paths = load_paths()\n",
-    "DATA_PATH = paths[\"DATA_PATH\"]\n",
-    "ARCHIVE_PATH = paths[\"ARCHIVE_PATH\"]\n",
-    "XML_SNAPSHOT_PATH = paths[\"XML_SNAPSHOT_PATH\"]\n",
+    "paths = init_notebook()\n",
+    "\n",
+    "# Access paths\n",
+    "archive_path = paths[\"ARCHIVE_PATH\"]\n",
+    "xml_snapshot_path = paths[\"XML_SNAPSHOT_PATH\"]\n",
+    "snapshot_date = paths[\"SNAPSHOT_DATE\"]\n",
     "\n",
     "# Format today's date\n",
     "today_str = datetime.today().strftime(\"%Y-%m-%d\")\n",
+    "print(today_str)\n",
     "\n",
-    "#print(shorten_path(ARCHIVE_PATH))\n",
-    "#print(shorten_path(DATA_PATH))\n",
-    "#print(shorten_path(XML_SNAPSHOT_PATH))"
+    "#from helpers.env_paths import load_paths\n",
+    "from doge_data_challenge.helpers.print_helpers import shorten_path\n",
+    "\n",
+    "print(shorten_path(archive_path))\n",
+    "print(shorten_path(xml_snapshot_path))\n",
+    "print(shorten_path(snapshot_date))\n",
+    "\n",
+    "for p in sys.path:\n",
+    "    print(shorten_path(p))\n"
    ]
   },
   {
@@ -141,7 +160,6 @@
    ],
    "source": [
     "from dotenv import load_dotenv\n",
-    "from datetime import datetime\n",
     "import requests\n",
     "import json\n",
     "import os\n",
@@ -239,15 +257,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "070f6fae-3124-4046-8aeb-2d6495fbcbaf",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved data frame to ../archive/flattened_agencies_list_2025-04-06.csv\n"
+     "ename": "NameError",
+     "evalue": "name 'flattened_rows' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m agencies_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\u001b[43mflattened_rows\u001b[49m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Preview the result\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m#agencies_df.head(len(agencies_df))\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m#print(f\"Total CFR references across all agencies and children: {len(agencies_df)}\")\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# Define archive directory and ensure it exists\u001b[39;00m\n\u001b[1;32m     10\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(ARCHIVE_PATH, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'flattened_rows' is not defined"
      ]
     }
    ],
