Refactor directory naming convention

--- a/notebooks/02_data_download_and_storage.ipynb
+++ b/notebooks/02_data_download_and_storage.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 67,
    "id": "7b207573-9219-4247-b380-b5ce4af32c32",
    "metadata": {},
    "outputs": [
@@ -21,25 +21,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/briankaewell/repo/doge-data-challenge/archive\n",
-      "/Users/briankaewell/repo/doge-data-challenge/data/regulations_xml/2025-03-27\n"
+      "~/repo/doge-data-challenge/archive\n",
+      "~/repo/doge-data-challenge/data/regulations_xml/2025-03-27\n",
+      "~/repo/doge-data-challenge/archive/flattened_agencies_list_2025-03-27.csv\n"
      ]
     }
    ],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"..\")  # So notebooks/utils is importable from inside notebooks/\n",
+    "\n",
+    "from utils.print_helpers import shorten_path\n",
     "from pathlib import Path\n",
-    "\n",
-    "snapshot_date = \"2025-03-27\"\n",
-    "\n",
-    "# Go up one level from the notebook directory to reach project root\n",
-    "PROJECT_ROOT = Path.cwd().resolve().parent\n",
     "\n",
     "# Snapshot date (can be reused across all notebooks)\n",
     "SNAPSHOT_DATE = \"2025-03-27\"\n",
     "\n",
+    "# Go up one level from the notebook directory to reach project root\n",
+    "PROJECT_ROOT = Path.cwd().resolve().parent\n",
+    "\n",
     "# Key directories relative to project root\n",
     "ARCHIVE_DIR = PROJECT_ROOT / \"archive\"\n",
     "XML_DIR = PROJECT_ROOT / \"data\" / \"regulations_xml\" / SNAPSHOT_DATE\n",
+    "CSV_PATH = ARCHIVE_DIR / f\"flattened_agencies_list_{SNAPSHOT_DATE}.csv\"\n",
+    "\n",
     "\n",
     "# Build relative directories\n",
     "#DATA_DIR = PROJECT_ROOT / \"data\" / \"regulations_xml\" / snapshot_date\n",
@@ -50,19 +55,17 @@
     "#########################################################\n",
     "# csv_path = \"../archive/flattened_agencies_list_2025-04-06.csv\"\n",
     "\n",
-    "print(ARCHIVE_DIR)\n",
-    "print(XML_DIR)\n",
-    "\n",
-    "#date = ????????\n",
+    "print(shorten_path(ARCHIVE_DIR))\n",
+    "print(shorten_path(XML_DIR))\n",
+    "print(shorten_path(CSV_PATH))\n",
     "\n",
     "# should the snapshot date be incorporated into the flattened_agencies_list_<date>.CSV file?? I think that makes sense\n",
-    "\n",
     "# define important top level variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 68,
    "id": "bbaf41d9-d247-49c7-80cf-348b124b656a",
    "metadata": {},
    "outputs": [
@@ -70,19 +73,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Loaded 487 rows from ../archive/flattened_agencies_list_2025-04-06.csv\n"
+      "✅ Loaded 487 rows from ~/repo/doge-data-challenge/archive/flattened_agencies_list_2025-03-27.csv\n"
      ]
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "if os.path.exists(csv_path):\n",
-    "    agencies_df = pd.read_csv(csv_path)\n",
-    "    print(f\"✅ Loaded {len(agencies_df)} rows from {csv_path}\")\n",
+    "if os.path.exists(CSV_PATH):\n",
+    "    agencies_df = pd.read_csv(CSV_PATH)\n",
+    "    print(f\"✅ Loaded {len(agencies_df)} rows from {shorten_path(CSV_PATH)}\")\n",
     "else:\n",
-    "    raise FileNotFoundError(f\"❌ Could not find {csv_path}\")"
+    "    raise FileNotFoundError(f\"❌ Could not find {shorten_path(CSV_PATH)}\")"
    ]
   },
   {
