Refactor notebook to store top-level agency json/csv metadata based on .env settings

--- a/notebooks/02_data_download_and_storage.ipynb
+++ b/notebooks/02_data_download_and_storage.ipynb
@@ -13,6 +13,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ce39e6cb-a836-40e7-b2e4-463073c9e228",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print config for verification\n",
+    "#print(f\"Snapshot Date: {snapshot_date}\")\n",
+    "\n",
+    "########### for 02 notebook.......\n",
+    "# Access paths and config\n",
+    "# regulation_text_path = paths[\"REGULATION_TEXT_PATH\"]  # i.e. ~/repo/doge-data-challenge/regulation_text/{SNAPSHOT_DATE}\n",
+    "\n",
+    "################# for 02 or 03 or 04 notebooks.......\n",
+    "# Print config for verification\n",
+    "# print(f\"Regulation Text Path: {shorten_path(regulation_text_path)}\")\n",
+    "# print(f\"Word Count Method: {config['WORDCOUNT_METHOD']}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 67,
    "id": "7b207573-9219-4247-b380-b5ce4af32c32",
    "metadata": {},
