Add dynamic file name and path to agency scraper notebook

--- a/notebooks/01_agency_scraper.ipynb
+++ b/notebooks/01_agency_scraper.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "678ecd7d-912d-49e1-91e7-91335cb0d9c2",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Agency Metadata Filename: ~/repo/doge-data-challenge/agency_metadata/2025-03-27/agencies_snapshot.json\n"
+      "Agencies Metadata JSON Path: ~/repo/doge-data-challenge/agency_metadata/2025-03-27/agencies_snapshot.json\n",
+      "\n"
      ]
     }
    ],
@@ -119,26 +120,16 @@
     "    raise\n",
     "\n",
     "# Access paths/config\n",
-    "#snapshot_date        = config[\"SNAPSHOT_DATE\"]       # i.e. 2025-03-27\n",
     "agency_metadata_path = paths[\"AGENCY_METADATA_PATH\"]  # i.e. ~/repo/doge-data-challenge/agency_metadata/{SNAPSHOT_DATE}\n",
     "\n",
-    "# Define output file path\n",
-    "filename_json = agency_metadata_path / \"agencies_snapshot.json\"\n",
-    "\n",
-    "# Print config for verification\n",
-    "#print(f\"Snapshot Date: {snapshot_date}\")\n",
-    "#print(f\"Agency Metadata Path: {shorten_path(agency_metadata_path)}\")\n",
-    "print(f\"Agency Metadata Filename: {shorten_path(filename_json)}\")\n",
-    "\n",
-    "# Debug: Print sys.path \n",
-    "#print(\"\\nSystem Paths:\")\n",
-    "#for p in sys.path:\n",
-    "#    print(shorten_path(p))\n"
+    "# Define output file path and file name\n",
+    "agencies_json_path = agency_metadata_path / \"agencies_snapshot.json\"\n",
+    "print(f\"Agencies Metadata JSON Path: {shorten_path(agencies_json_path)}\\n\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "a39fd405-f7bd-4196-803e-a3a980a8c90b",
    "metadata": {
     "scrolled": true
@@ -148,7 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved snapshot of agency JSON to ~/repo/doge-data-challenge/agency_metadata/2025-03-27/agencies_snapshot.json\n",
+      "✅ Saved snapshot of agency JSON to: ~/repo/doge-data-challenge/agency_metadata/2025-03-27/agencies_snapshot.json\n",
       "\n",
       "{\n",
       "  \"agencies\": [\n",
@@ -5136,8 +5127,6 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import sys\n",
     "import json\n",
     "import requests\n",
     "from pathlib import Path\n",
@@ -5166,23 +5155,22 @@
     "    print(f\"Error fetching agency metadata: {e}\\n\")\n",
     "    raise\n",
     "\n",
-    "\n",
     "# Save JSON to file\n",
     "try:\n",
-    "    with open(filename_json, \"w\") as f:\n",
+    "    with open(agencies_json_path, \"w\") as f:\n",
     "        json.dump(data, f, indent=2)\n",
-    "    print(f\"Saved snapshot of agency JSON to {shorten_path(filename_json)}\\n\")\n",
+    "    print(f\"✅ Saved snapshot of agency JSON to: {shorten_path(agencies_json_path)}\\n\")\n",
     "except OSError as e:\n",
-    "    print(f\"Error saving JSON to {shorten_path(filename_json)}: {e}\\n\")\n",
+    "    print(f\"❌ Error saving JSON to: {shorten_path(agencies_json_path)}: {e}\\n\")\n",
     "    raise\n",
     "\n",
-    "# Optional: Print JSON for debugging (uncomment if needed)\n",
+    "# Debug\n",
     "print(json.dumps(data, indent=2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "de6c9050-7903-4378-a134-6b5601d38432",
    "metadata": {},
    "outputs": [],
@@ -5233,7 +5221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "d70b83cb-57c1-45c5-a274-a77e2e303fdd",
    "metadata": {},
    "outputs": [
@@ -5242,7 +5230,8 @@
      "output_type": "stream",
      "text": [
       "Total CFR references across all agencies and children: 487\n",
-      "Saved data frame to ~/repo/doge-data-challenge/agency_metadata/2025-03-27/agencies_snapshot.csv\n"
+      "✅ Saved data frame snapshot of agency CSV to: ~/repo/doge-data-challenge/agency_metadata/2025-03-27/agencies_snapshot.csv\n",
+      "\n"
      ]
     }
    ],
@@ -5255,16 +5244,16 @@
     "# Preview the result\n",
     "print(f\"Total CFR references across all agencies and children: {len(agencies_df)}\")\n",
     "\n",
-    "filename_csv = agency_metadata_path / \"agencies_snapshot.csv\"\n",
+    "agencies_csv_path = agency_metadata_path / \"agencies_snapshot.csv\"\n",
     "\n",
     "# Save data frame to a csv file\n",
-    "agencies_df.to_csv(filename_csv, index=False)\n",
-    "print(\"Saved data frame to\", shorten_path(filename_csv))"
+    "agencies_df.to_csv(agencies_csv_path, index=False)\n",
+    "print(f\"✅ Saved data frame snapshot of agency CSV to: {shorten_path(agencies_csv_path)}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "35b4df30-fd37-4a48-afd5-b2adbdac522e",
    "metadata": {
     "scrolled": true
@@ -5471,7 +5460,7 @@
        "[487 rows x 8 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5482,7 +5471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "058af69b-b2cb-49e1-8a13-20f8dde6ac67",
    "metadata": {},
    "outputs": [
@@ -5496,8 +5485,18 @@
    ],
    "source": [
     "import sys\n",
+    "\n",
+    "#Debug\n",
     "print(shorten_path(sys.executable))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cbc821a-d9d8-417f-a832-f751a1236e88",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
